--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1130,6 +1130,21 @@ select {
 .top-0 {
 	top: 0px;
 }
+.-left-1\.5 {
+	left: -0.375rem;
+}
+.-left-1 {
+	left: -0.25rem;
+}
+.left-1\.5 {
+	left: 0.375rem;
+}
+.left-1 {
+	left: 0.25rem;
+}
+.-left-2 {
+	left: -0.5rem;
+}
 .z-0 {
 	z-index: 0;
 }
@@ -1145,13 +1160,12 @@ select {
 .col-span-3 {
 	grid-column: span 3 / span 3;
 }
+.col-span-2 {
+	grid-column: span 2 / span 2;
+}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
-}
-.mx-2 {
-	margin-left: 0.5rem;
-	margin-right: 0.5rem;
 }
 .mx-6 {
 	margin-left: 1.5rem;
@@ -1161,13 +1175,17 @@ select {
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
 }
-.my-4 {
-	margin-top: 1rem;
-	margin-bottom: 1rem;
+.mx-2 {
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
 }
 .mx-1 {
 	margin-left: 0.25rem;
 	margin-right: 0.25rem;
+}
+.my-4 {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
 .ml-3 {
 	margin-left: 0.75rem;
@@ -1247,14 +1265,23 @@ select {
 .mb-2 {
 	margin-bottom: 0.5rem;
 }
-.-mt-px {
-	margin-top: -1px;
-}
 .mr-1 {
 	margin-right: 0.25rem;
 }
 .mt-auto {
 	margin-top: auto;
+}
+.ml-auto {
+	margin-left: auto;
+}
+.mt-0\.5 {
+	margin-top: 0.125rem;
+}
+.mt-0 {
+	margin-top: 0px;
+}
+.-mt-px {
+	margin-top: -1px;
 }
 .block {
 	display: block;
@@ -1313,11 +1340,14 @@ select {
 .h-2 {
 	height: 0.5rem;
 }
+.h-80 {
+	height: 20rem;
+}
 .h-48 {
 	height: 12rem;
 }
-.h-80 {
-	height: 20rem;
+.h-1 {
+	height: 0.25rem;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1387,6 +1417,9 @@ select {
 }
 .max-w-xl {
 	max-width: 36rem;
+}
+.max-w-5xl {
+	max-width: 64rem;
 }
 .max-w-6xl {
 	max-width: 72rem;
@@ -1475,6 +1508,9 @@ select {
 .grid-cols-4 {
 	grid-template-columns: repeat(4, minmax(0, 1fr));
 }
+.grid-cols-5 {
+	grid-template-columns: repeat(5, minmax(0, 1fr));
+}
 .grid-cols-2 {
 	grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -1520,19 +1556,22 @@ select {
 	margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
-.divide-x > :not([hidden]) ~ :not([hidden]) {
-	--tw-divide-x-reverse: 0;
-	border-right-width: calc(1px * var(--tw-divide-x-reverse));
-	border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
-}
 .divide-y > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-y-reverse: 0;
 	border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
 	border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
+.divide-x > :not([hidden]) ~ :not([hidden]) {
+	--tw-divide-x-reverse: 0;
+	border-right-width: calc(1px * var(--tw-divide-x-reverse));
+	border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
+}
 .divide-gray-200 > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-opacity: 1;
 	border-color: rgba(229, 231, 235, var(--tw-divide-opacity));
+}
+.justify-self-center {
+	justify-self: center;
 }
 .overflow-hidden {
 	overflow: hidden;
@@ -1616,13 +1655,13 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
-.border-gray-400 {
-	--tw-border-opacity: 1;
-	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
-}
 .border-indigo-500 {
 	--tw-border-opacity: 1;
 	border-color: rgba(99, 102, 241, var(--tw-border-opacity));
+}
+.border-gray-400 {
+	--tw-border-opacity: 1;
+	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 .bg-white {
 	--tw-bg-opacity: 1;
@@ -1683,6 +1722,18 @@ select {
 .bg-greenLime-600 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(101, 163, 13, var(--tw-bg-opacity));
+}
+.bg-blue-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
+}
+.bg-gray-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
+.bg-red-400 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
@@ -1808,6 +1859,9 @@ select {
 }
 .pb-1 {
 	padding-bottom: 0.25rem;
+}
+.pb-6 {
+	padding-bottom: 1.5rem;
 }
 .pt-8 {
 	padding-top: 2rem;
@@ -1959,6 +2013,22 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(249, 115, 22, var(--tw-text-opacity));
 }
+.text-red-100 {
+	--tw-text-opacity: 1;
+	color: rgba(254, 226, 226, var(--tw-text-opacity));
+}
+.text-yellow-400 {
+	--tw-text-opacity: 1;
+	color: rgba(251, 191, 36, var(--tw-text-opacity));
+}
+.text-trueGray-700 {
+	--tw-text-opacity: 1;
+	color: rgba(64, 64, 64, var(--tw-text-opacity));
+}
+.text-greenLime-600 {
+	--tw-text-opacity: 1;
+	color: rgba(101, 163, 13, var(--tw-text-opacity));
+}
 .text-gray-200 {
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
@@ -1966,22 +2036,6 @@ select {
 .text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
-}
-.text-trueGray-700 {
-	--tw-text-opacity: 1;
-	color: rgba(64, 64, 64, var(--tw-text-opacity));
-}
-.text-yellow-400 {
-	--tw-text-opacity: 1;
-	color: rgba(251, 191, 36, var(--tw-text-opacity));
-}
-.text-greenLime-600 {
-	--tw-text-opacity: 1;
-	color: rgba(101, 163, 13, var(--tw-text-opacity));
-}
-.text-red-100 {
-	--tw-text-opacity: 1;
-	color: rgba(254, 226, 226, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -2188,25 +2242,25 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(253, 186, 116, var(--tw-text-opacity));
 }
-.hover\:text-orange-400:hover {
-	--tw-text-opacity: 1;
-	color: rgba(251, 146, 60, var(--tw-text-opacity));
-}
 .hover\:text-white:hover {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+.hover\:text-orange-400:hover {
+	--tw-text-opacity: 1;
+	color: rgba(251, 146, 60, var(--tw-text-opacity));
 }
 .hover\:text-orange-500:hover {
 	--tw-text-opacity: 1;
 	color: rgba(249, 115, 22, var(--tw-text-opacity));
 }
-.hover\:text-orange-600:hover {
-	--tw-text-opacity: 1;
-	color: rgba(234, 88, 12, var(--tw-text-opacity));
-}
 .hover\:text-red-600:hover {
 	--tw-text-opacity: 1;
 	color: rgba(220, 38, 38, var(--tw-text-opacity));
+}
+.hover\:text-orange-600:hover {
+	--tw-text-opacity: 1;
+	color: rgba(234, 88, 12, var(--tw-text-opacity));
 }
 .hover\:underline:hover {
 	text-decoration: underline;
