--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1127,23 +1127,17 @@ select {
 .right-0 {
 	right: 0px;
 }
-.top-0 {
-	top: 0px;
-}
 .-left-1\.5 {
 	left: -0.375rem;
 }
 .-left-1 {
 	left: -0.25rem;
 }
-.left-1\.5 {
-	left: 0.375rem;
-}
-.left-1 {
-	left: 0.25rem;
-}
 .-left-2 {
 	left: -0.5rem;
+}
+.top-0 {
+	top: 0px;
 }
 .z-0 {
 	z-index: 0;
@@ -1167,6 +1161,10 @@ select {
 	margin-left: auto;
 	margin-right: auto;
 }
+.mx-2 {
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
+}
 .mx-6 {
 	margin-left: 1.5rem;
 	margin-right: 1.5rem;
@@ -1174,10 +1172,6 @@ select {
 .my-2 {
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
-}
-.mx-2 {
-	margin-left: 0.5rem;
-	margin-right: 0.5rem;
 }
 .mx-1 {
 	margin-left: 0.25rem;
@@ -1259,11 +1253,20 @@ select {
 .mb-3 {
 	margin-bottom: 0.75rem;
 }
+.mt-0\.5 {
+	margin-top: 0.125rem;
+}
+.mt-0 {
+	margin-top: 0px;
+}
 .mr-4 {
 	margin-right: 1rem;
 }
 .mb-2 {
 	margin-bottom: 0.5rem;
+}
+.-mt-px {
+	margin-top: -1px;
 }
 .mr-1 {
 	margin-right: 0.25rem;
@@ -1274,14 +1277,8 @@ select {
 .ml-auto {
 	margin-left: auto;
 }
-.mt-0\.5 {
-	margin-top: 0.125rem;
-}
-.mt-0 {
-	margin-top: 0px;
-}
-.-mt-px {
-	margin-top: -1px;
+.mt-12 {
+	margin-top: 3rem;
 }
 .block {
 	display: block;
@@ -1334,20 +1331,20 @@ select {
 .h-64 {
 	height: 16rem;
 }
+.h-1 {
+	height: 0.25rem;
+}
 .h-full {
 	height: 100%;
 }
 .h-2 {
 	height: 0.5rem;
 }
-.h-80 {
-	height: 20rem;
-}
 .h-48 {
 	height: 12rem;
 }
-.h-1 {
-	height: 0.25rem;
+.h-80 {
+	height: 20rem;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1508,11 +1505,11 @@ select {
 .grid-cols-4 {
 	grid-template-columns: repeat(4, minmax(0, 1fr));
 }
-.grid-cols-5 {
-	grid-template-columns: repeat(5, minmax(0, 1fr));
-}
 .grid-cols-2 {
 	grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.grid-cols-5 {
+	grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -1569,9 +1566,6 @@ select {
 .divide-gray-200 > :not([hidden]) ~ :not([hidden]) {
 	--tw-divide-opacity: 1;
 	border-color: rgba(229, 231, 235, var(--tw-divide-opacity));
-}
-.justify-self-center {
-	justify-self: center;
 }
 .overflow-hidden {
 	overflow: hidden;
@@ -1655,13 +1649,13 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
-.border-indigo-500 {
-	--tw-border-opacity: 1;
-	border-color: rgba(99, 102, 241, var(--tw-border-opacity));
-}
 .border-gray-400 {
 	--tw-border-opacity: 1;
 	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
+}
+.border-indigo-500 {
+	--tw-border-opacity: 1;
+	border-color: rgba(99, 102, 241, var(--tw-border-opacity));
 }
 .bg-white {
 	--tw-bg-opacity: 1;
@@ -1711,18 +1705,6 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
-.bg-orange-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(249, 115, 22, var(--tw-bg-opacity));
-}
-.bg-trueGray-700 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(64, 64, 64, var(--tw-bg-opacity));
-}
-.bg-greenLime-600 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(101, 163, 13, var(--tw-bg-opacity));
-}
 .bg-blue-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(96, 165, 250, var(--tw-bg-opacity));
@@ -1731,15 +1713,45 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
-.bg-red-400 {
+.bg-orange-500 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
+	background-color: rgba(249, 115, 22, var(--tw-bg-opacity));
+}
+.bg-trueGray-700 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(64, 64, 64, var(--tw-bg-opacity));
+}
+.bg-red-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(239, 68, 68, var(--tw-bg-opacity));
+}
+.bg-greenLime-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(101, 163, 13, var(--tw-bg-opacity));
+}
+.bg-yellow-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
+}
+.bg-pink-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(236, 72, 153, var(--tw-bg-opacity));
+}
+.bg-green-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
 }
 .bg-opacity-100 {
 	--tw-bg-opacity: 1;
+}
+.bg-opacity-50 {
+	--tw-bg-opacity: 0.5;
+}
+.bg-opacity-75 {
+	--tw-bg-opacity: 0.75;
 }
 .bg-cover {
 	background-size: cover;
@@ -1826,6 +1838,10 @@ select {
 	padding-top: 2.5rem;
 	padding-bottom: 2.5rem;
 }
+.px-12 {
+	padding-left: 3rem;
+	padding-right: 3rem;
+}
 .px-16 {
 	padding-left: 4rem;
 	padding-right: 4rem;
@@ -1860,11 +1876,11 @@ select {
 .pb-1 {
 	padding-bottom: 0.25rem;
 }
-.pb-6 {
-	padding-bottom: 1.5rem;
-}
 .pt-8 {
 	padding-top: 2rem;
+}
+.pb-6 {
+	padding-bottom: 1.5rem;
 }
 .text-left {
 	text-align: left;
@@ -2013,22 +2029,6 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(249, 115, 22, var(--tw-text-opacity));
 }
-.text-red-100 {
-	--tw-text-opacity: 1;
-	color: rgba(254, 226, 226, var(--tw-text-opacity));
-}
-.text-yellow-400 {
-	--tw-text-opacity: 1;
-	color: rgba(251, 191, 36, var(--tw-text-opacity));
-}
-.text-trueGray-700 {
-	--tw-text-opacity: 1;
-	color: rgba(64, 64, 64, var(--tw-text-opacity));
-}
-.text-greenLime-600 {
-	--tw-text-opacity: 1;
-	color: rgba(101, 163, 13, var(--tw-text-opacity));
-}
 .text-gray-200 {
 	--tw-text-opacity: 1;
 	color: rgba(229, 231, 235, var(--tw-text-opacity));
@@ -2036,6 +2036,30 @@ select {
 .text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
+.text-red-100 {
+	--tw-text-opacity: 1;
+	color: rgba(254, 226, 226, var(--tw-text-opacity));
+}
+.text-trueGray-700 {
+	--tw-text-opacity: 1;
+	color: rgba(64, 64, 64, var(--tw-text-opacity));
+}
+.text-yellow-400 {
+	--tw-text-opacity: 1;
+	color: rgba(251, 191, 36, var(--tw-text-opacity));
+}
+.text-greenLime-600 {
+	--tw-text-opacity: 1;
+	color: rgba(101, 163, 13, var(--tw-text-opacity));
+}
+.text-yellow-500 {
+	--tw-text-opacity: 1;
+	color: rgba(245, 158, 11, var(--tw-text-opacity));
+}
+.text-pink-500 {
+	--tw-text-opacity: 1;
+	color: rgba(236, 72, 153, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -2242,13 +2266,13 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(253, 186, 116, var(--tw-text-opacity));
 }
-.hover\:text-white:hover {
-	--tw-text-opacity: 1;
-	color: rgba(255, 255, 255, var(--tw-text-opacity));
-}
 .hover\:text-orange-400:hover {
 	--tw-text-opacity: 1;
 	color: rgba(251, 146, 60, var(--tw-text-opacity));
+}
+.hover\:text-white:hover {
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 .hover\:text-orange-500:hover {
 	--tw-text-opacity: 1;
